--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.14.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
@@ -32,6 +33,6 @@
     "winston": "^3.17.0"
   },
   "engines": {
-  "node": "18.x"
-}
+    "node": "18.x"
+  }
 }
